0.0.3 / 2012-07-06

* Bug fixes

  * Show column names on table bodies in pdf format

* Enhancements

  * Provide Report#cleanup to remove tmp files

0.0.2 / 2012-07-04

* Bug fixes

  * Properly handle true and false values in pdf and xlsx

* Enhancements

  * More sensible default spacing, font size, and page margins for pdf output
  * If a column is named "Did you really see it?", try #Did_you_really_see_it? and #did_you_really_see_it? (previously we lost ? and ! characters)
  * If a "body.rows" method yields instead of just returning an enumerable, re-yield it
  * If a column block takes 2 args (arity = 2), pass it report and row obj. This is useful when each row is calculated using (1) the row object and (2) something defined only on the report instance itself.

0.0.1 / 2012-07-04

Initial release!