@@ -1,3 +1,9 @@
+unreleased / 2012-07-10
+
+* Enhancements
+
+  * In XLSX output, freeze panes underneath first row of body
+
 0.0.3 / 2012-07-06
 
 * Bug fixes
